src/objects/Apttus_Config2__IncentiveCustomDisplayActions__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__ActionLabelName__c</fullName>
        <description>The name of the custom label for the action.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the custom label for the action.</inlineHelpText>
        <label>Action Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionName__c</fullName>
        <description>Enter the API name for the action.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the API name for the action.</inlineHelpText>
        <label>Action Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionPage__c</fullName>
        <description>The name of the custom action page.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the custom action page.</inlineHelpText>
        <label>Action Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionParams__c</fullName>
        <description>The url parameters for the action. Multiple parameters may be passed by using the ampersand character to separate each parameter. Each parameter is expressed in the form param-name=param-value. For e.g. templateName=XYZ&amp;draft=true</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The url parameters for the action. Multiple parameters may be passed by using the ampersand character to separate each parameter. Each parameter is expressed in the form param-name=param-value. For e.g. templateName=XYZ&amp;draft=true</inlineHelpText>
        <label>Action Params</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PageAreaForActionDisplay__c</fullName>
        <defaultValue>&quot;Benefit Matrix&quot;</defaultValue>
        <description>The area in the page to display the custom actions</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The area in the page to display the custom actions</inlineHelpText>
        <label>Page Area For Action Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseType__c</fullName>
        <defaultValue>&quot;Rebate&quot;</defaultValue>
        <description>The incentive use type. Valid Values are:

Promotion
Rebate
Milestone Incentive</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The incentive use type. Valid Values are:

Promotion
Rebate
Milestone Incentive</inlineHelpText>
        <label>Application Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>